[package]
name = "cleanshitx"
version = "0.1.0"
edition = "2021"

[dependencies]
# display server
x11rb = { version = "0.12", features = ["all-extensions"] }
zbus = "3.14"  # for dbus/portal communication

# error handling
thiserror = "1.0"
anyhow = "1.0"

# utils
dirs = "5.0"   # xdg dirs support
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1.4"  # better test output
test-case = "3.3"         # parameterized tests
mockall = "0.12"          # mocking framework
