[package]
name = "cleanshitx"
version = "0.1.0"
edition = "2021"

[dependencies]
# display server
x11rb = { version = "0.13.2", features = ["all-extensions"] }
zbus = "5.11.0"  # for dbus/portal communication
tokio = { version = "1.47.1", features = ["full"] }
ashpd = { version = "0.11", default-features = false, features = ["tokio"] }

# error handling
thiserror = "2.0.16"
anyhow = "1.0.99"

# utils
dirs = "6.0.0"   # xdg dirs support
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
tracing = "0.1.41"
futures-util = "0.3.31"
async-trait = "0.1.89"
image = { version = "0.24.9", features = ["png", "jpeg"] }
chrono = "0.4"

[dev-dependencies]
pretty_assertions = "1.4.1"  # better test output
test-case = "3.3.1"         # parameterized tests
mockall = "0.13.1"          # mocking framework
